deploy/overlays/company/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: jcode
  labels:
    app.kubernetes.io/part-of: jcloud
